[metadata]
name = dwm
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://aprsd.readthedocs.org
author = Walter A. Boring IV
author_email = waboring@hemna.com
license = Apache
license_file = LICENSE
classifier =
    License :: OSI Approved :: Apache Software License
    Topic :: Communications :: Ham Radio
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description_file =
    README.rst
project_urls =
    Source=https://github.com/hemna/python-direwolf-monitor
    Tracker=https://github.com/hemna/python-direwolf-monitor/issues
summary = Amateur radio Direwolf python monitoring app

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    direwolf_monitor

[entry_points]
console_scripts =
    dwm = direwolf_monitor.cli:main

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build

[bdist_wheel]
universal = 1
